ExchangeRateValidator refactor